# clear-plex-watchlist

./: .env.example  .gitignore  Makefile  README.md  clear-plex-watchlist.py  pyproject.toml
clear_plex_watchlist/: __init__.py  __main__.py  main.py
