[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "clear_plex_watchlist"
dynamic = ["version"]
description = "A utility to clear Plex watchlists efficiently"
readme = "README.md"
requires-python = ">=3.12"
license = {text = "MIT"}
authors = [
    { name = "cellwebb", email = "cellwebb@users.noreply.github.com" },
]
dependencies = [
    "plexapi>=4.15.0",
    "python-dotenv>=1.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "ruff>=0.3.0",
]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "B", "I"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
line-ending = "auto"

[tool.pytest]
testpaths = ["tests"]

[project.scripts]
clear-plex-watchlist = "clear_plex_watchlist:clear_plex_watchlist"

[tool.hatch.version]
path = "clear_plex_watchlist/__version__.py"
